syntax = "proto3";
import "config.proto";

package aws.kinesis.protobuf;
option java_package = "com.amazonaws.kinesis.producer.protobuf";

message Tag {
  string key   = 1;
  string value = 2;
}

message Record {
  uint64 partition_key_index     = 1;
  uint64 explicit_hash_key_index = 2;
  bytes  data                    = 3;
  repeated Tag    tags                    = 4;
}

message AggregatedRecord {
  repeated string partition_key_table     = 1;
  repeated string explicit_hash_key_table = 2;
  repeated Record records                 = 3;
}

message Message {
  uint64 id        = 1;
  uint64 source_id = 2;

  oneof actual_message {
    PutRecord       put_record        = 3;
    Flush           flush             = 4;
    PutRecordResult put_record_result = 5;
    Configuration   configuration     = 6;
    MetricsRequest  metrics_request   = 7;
    MetricsResponse metrics_response  = 8;
    SetCredentials  set_credentials   = 9;
  }
}

message PutRecord {
  string stream_name          = 1;
  string partition_key        = 2;
  string explicit_hash_key    = 3;
  bytes  data                 = 4;
}

message Flush {
  string stream_name = 1;
}

message Attempt {
  uint32 delay         = 1;
  uint32 duration      = 2;
  bool   success       = 3;
  string error_code    = 4;
  string error_message = 5;
}

message PutRecordResult {
  repeated Attempt attempts        = 1;
  bool    success         = 2;
  string  shard_id        = 3;
  string  sequence_number = 4;
}

// *********** Credentials ************

message Credentials {
  string akid       = 1;
  string secret_key = 2;
  string token      = 3;
}

message SetCredentials {
  bool        for_metrics = 1;
  Credentials credentials = 2;
}

// *********** Metrics ************

message Dimension {
  string key   = 1;
  string value = 2;
}

message Stats {
  double count = 1;
  double sum   = 2;
  double mean  = 3;
  double min   = 4;
  double max   = 5;
}

message Metric {
  string    name       = 1;
  repeated Dimension dimensions = 2;
  Stats     stats      = 3;
  uint64    seconds    = 4;
}

message MetricsRequest {
  string name    = 1;
  uint64 seconds = 2;
}

message MetricsResponse {
  repeated Metric metrics = 1;
}
